--- a/example/src/App.css
+++ b/example/src/App.css
@@ -8,4 +8,8 @@
 
 .container {
   width: 80vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: flex-start;
 }
